fix: element title overflow & image size

--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,6 @@
 .element__image {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 282px;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
