--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -4,4 +4,8 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  max-width: 70%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
